# genesis-c

./: CMakeLists.txt  LICENSE  README.md  TODO.md  genesis.c  genesis.h  genesis_noop.c  genesis_noop.h  genesis_opengl.c  genesis_opengl.h  test.c
glad/include/glad/: gl.h
